Rust/tests/Programs/fail_compile/003_nested_fn.to
fn outer() {
  fn inner() {
    return 1
  }
  return inner()
}
print outer()
